--- a/stamp.html
+++ b/stamp.html
@@ -17,8 +17,8 @@
       align-items: center;
       justify-content: flex-start;
       min-height: 100vh;
-      position: relative;
       background: #001a26;
+      position: relative;
     }
     body::before {
       content: "";
@@ -38,8 +38,8 @@
       background: radial-gradient(circle, rgba(0,255,255,0.25) 0%, transparent 70%);
       transform: translate(-50%, -50%);
       animation: pulseLight 2.5s ease-in-out infinite;
-      pointer-events: none;
       z-index: 1;
+      pointer-events: none;
       filter: blur(2px);
     }
     body.complete::after {
@@ -47,22 +47,26 @@
       background: radial-gradient(circle, rgba(0,255,255,0.5) 0%, transparent 70%);
       filter: blur(4px) drop-shadow(0 0 15px #00ffff);
     }
+
     @keyframes pulseLight {
       0%, 100% { opacity: 0.7; transform: translate(-50%, -50%) scale(1); }
       50% { opacity: 1; transform: translate(-50%, -50%) scale(1.2); }
     }
+
     h1 {
       margin-top: 40px;
       font-size: 2rem;
       text-shadow: 0 0 10px #00ffff;
-      position: relative;
       z-index: 2;
+      position: relative;
     }
+
     h1.glitch-title {
       animation: text-glitch 1.5s infinite;
       color: #00ffff;
       text-shadow: 2px 0 #00f, -2px 0 #f0f, 0 2px #0ff;
     }
+
     @keyframes text-glitch {
       0% { transform: translate(0); }
       20% { transform: translate(1px, -1px); }
@@ -71,6 +75,7 @@
       80% { transform: translate(-1px, -2px); }
       100% { transform: translate(0); }
     }
+
     .progress-bar {
       width: 90%;
       max-width: 600px;
@@ -80,11 +85,10 @@
       overflow: hidden;
       margin: 20px auto;
       box-shadow: 0 0 10px #00ffff66;
-      position: relative;
       z-index: 2;
       backdrop-filter: blur(10px);
-      -webkit-backdrop-filter: blur(10px);
     }
+
     .progress-bar-fill {
       height: 100%;
       width: 0%;
@@ -92,13 +96,13 @@
       transition: width 1s ease;
       animation: glowbar 2s ease-in-out infinite alternate;
       border-radius: 10px;
-      position: relative;
-      z-index: 2;
     }
+
     @keyframes glowbar {
       from { filter: brightness(1); }
       to { filter: brightness(1.5); }
     }
+
     .poster-grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
@@ -106,9 +110,9 @@
       padding: 20px;
       width: 95%;
       max-width: 720px;
-      position: relative;
       z-index: 2;
     }
+
     .poster {
       position: relative;
       width: 100%;
@@ -120,13 +124,14 @@
       box-shadow: 0 0 10px #00ffff33;
       cursor: pointer;
       backdrop-filter: blur(8px);
-      -webkit-backdrop-filter: blur(8px);
       border: 1px solid rgba(0, 255, 255, 0.3);
       transition: box-shadow 0.3s ease;
     }
+
     .poster:hover {
       box-shadow: 0 0 20px #00ffffaa;
     }
+
     .stamp {
       position: absolute;
       top: 0; left: 0;
@@ -136,11 +141,13 @@
       animation: pop 0.5s ease;
       filter: drop-shadow(0 0 4px #00ffff);
     }
+
     @keyframes pop {
       0% { transform: scale(0.2); opacity: 0; filter: brightness(2); }
       80% { transform: scale(1.2); opacity: 1; filter: brightness(1.5); }
       100% { transform: scale(1); filter: brightness(1); }
     }
+
     #completeBanner, #perfectBanner {
       padding: 16px;
       border-radius: 12px;
@@ -152,12 +159,14 @@
       position: relative;
       z-index: 2;
     }
+
     #completeBanner {
       background: rgba(0, 255, 200, 0.2);
       border: 2px solid #00ffff;
       box-shadow: 0 0 20px #00ffff, 0 0 40px #00ffff66;
       text-shadow: 0 0 5px #00ffff;
     }
+
     #perfectBanner {
       background: rgba(255, 215, 0, 0.3);
       border: 2px solid gold;
@@ -165,10 +174,12 @@
       text-shadow: 0 0 8px gold;
       font-size: 1.4rem;
     }
+
     @keyframes glow {
       from { box-shadow: 0 0 10px #00ffff, 0 0 20px #00ffff66; }
       to { box-shadow: 0 0 30px #00ffff, 0 0 60px #00ffff99; }
     }
+
     .modal {
       display: none;
       position: fixed;
@@ -179,33 +190,22 @@
       justify-content: center;
       align-items: center;
     }
+
     .modal img {
       max-height: 90vh;
       max-width: 90vw;
       box-shadow: 0 0 20px #00ffff;
       border-radius: 10px;
     }
-    body.glitch-mode {
-      position: relative;
-      overflow: hidden;
-    }
+
     body.glitch-mode::before,
     body.glitch-mode::after {
-      content: '';
-      position: fixed;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      background: inherit;
+      animation: glitch-flicker 1.5s infinite;
       mix-blend-mode: screen;
       opacity: 0.15;
-      pointer-events: none;
-      animation: glitch-flicker 2s infinite;
       z-index: 99;
     }
-    body.glitch-mode::after {
-      animation-delay: 1s;
-      opacity: 0.2;
-    }
+
     @keyframes glitch-flicker {
       0% { clip-path: inset(0 0 100% 0); transform: translate(0); }
       10% { clip-path: inset(10% 0 80% 0); transform: translate(-5px, -5px); }
@@ -214,6 +214,7 @@
       40% { clip-path: inset(0 0 100% 0); transform: translate(0); }
       100% { clip-path: inset(0 0 100% 0); transform: translate(0); }
     }
+
     @media (max-width: 480px) {
       h1 { font-size: 1.5rem; }
       .progress-bar { height: 16px; }
@@ -235,27 +236,31 @@
   <script>
     const posterList = ["A", "B", "C", "D", "E", "F", "G", "H", "I"];
     const secretPosterList = ["J"];
-
     const urlParams = new URLSearchParams(window.location.search);
     const posterId = urlParams.get("id")?.toUpperCase();
     const secretMode = urlParams.get("secret") === "1";
     const secretToken = localStorage.getItem("gyumax_seal_access");
 
+    // 不正アクセス防止
     if (secretMode && secretToken !== "1") {
-      window.location.href = "index.html"; // 不正アクセス時
+      window.location.href = "index.html";
     }
 
     const allPosters = secretMode ? posterList.concat(secretPosterList) : posterList;
 
     if (posterId && allPosters.includes(posterId)) {
       const key = `gyumax_${posterId}`;
-      if (!localStorage.getItem(key)) {
+      const isNew = !localStorage.getItem(key);
+      if (isNew) {
         localStorage.setItem(key, "1");
-        if (posterId === "J") {
-          document.body.classList.add("glitch-mode");
-          document.getElementById("pageTitle").classList.add("glitch-title");
-        }
       }
+
+      // Jなら演出を常に出す
+      if (posterId === "J") {
+        document.body.classList.add("glitch-mode");
+        document.getElementById("pageTitle").classList.add("glitch-title");
+      }
+
       localStorage.removeItem("gyumax_seal_access");
     }
 
