--- a/error.html
+++ b/error.html
@@ -256,7 +256,7 @@
 
       case 4:
         // 4回目：3回目揺れ維持＋魔法陣光量UP＋メッセージ
-        msg.textContent = "…流石に限界だ。これ以上抑えておけそうにない。";
+        msg.textContent = "…流石に限界だ。これ以上抑えておけそうにない。もう来るな";
         body.classList.add("shake-strong");
         magicCircle.classList.add("bright");
         enableButton();
