--- a/result.html
+++ b/result.html
@@ -450,60 +450,60 @@
   const textMap = {
     "A": {
       win: {
-        main: "🎯 あたり！",
-        sub: "チーズトッピング無料！",
-        note: "※スタッフにこの画面を提示してください"
+        main: "あたり",
+        sub: "これが奇跡だ。日頃の行いの結果だな。",
+        note: "スタッフにこの画面を提示すればチーズトッピング無料！"
       },
       lose: {
-        main: "🔘 はずれ…",
-        sub: "今日は運がなかった。だが、まだ機会はある。",
-        note: ""
+        main: "はずれ",
+        sub: "そうか。俺もまだない。ポスターはまだある。そう気を落とすな",
+        note: "ポスターは全部で９枚ある。"
       }
     },
     "B": {
       win: {
-        main: "🌟 大当たり！",
-        sub: "おめでとうございます！特別景品を獲得！",
-        note: "※店員にこの画面を見せてください"
+        main: "あたり",
+        sub: "どうですか。せっかくですし、一度、買われていきませんか？",
+        note: "この画面を提示すればチーズトッピングが無料で付けられますよ。"
       },
       lose: {
-        main: "❌ 残念！",
-        sub: "次回に期待しましょう！",
-        note: ""
+        main: "はずれ",
+        sub: "おや、残念ですね。せっかくですし、他のポスターも探してみましょう。当たるかもしれません。",
+        note: "ポスターは全部で９枚あるそうですよ。噂によるとシークレット…っと、これはまだ秘密にしておきましょうか。"
       }
     },
     "C": {
       win: {
-        main: "🎉 あたり！",
-        sub: "無料トッピングゲット！",
-        note: "スタッフに画面提示をお忘れなく"
+        main: "あたり",
+        sub: "やったなおい！トッピングしてもらって他の人にも自慢しにいこうぜ！",
+        note: "この画面見せれば無料でトッピングしてもらえるんだってよ！早く行こうぜ！"
       },
       lose: {
-        main: "😞 はずれです",
-        sub: "また挑戦してくださいね！",
-        note: ""
+        main: "はずれ",
+        sub: "ん～まぁでも他のポスター見つけて読み込めばまたガチャ出来るから、探しつつ色々見て回ろうぜ！",
+        note: "ポスターは全部で９枚あるっつうから、まぁ全部やればどれかは当たるさ"
       }
     },
     "D": {
       win: {
-        main: "✨ あたり！",
-        sub: "特別な景品をゲット！",
-        note: "スタッフにこの画面を提示してください"
+        main: "あたり！",
+        sub: "えやったじゃん！運良いね～！えっと、ちょっと待ってね、あ、あったあった",
+        note: "「この画面をみせればチーズトッピング無料」…だってさ！早く行こ！"
       },
       lose: {
-        main: "😭 はずれ…",
-        sub: "次のチャンスを待ちましょう！",
-        note: ""
+        main: "はずれ",
+        sub: "…他のポスター探そっか。",
+        note: "大丈夫。全部で９枚あるから。全部外れることはないとおもうよ。"
       }
     },
     "E": {
       win: {
-        main: "🍀 あたり！",
-        sub: "おめでとうございます！トッピング無料です。",
-        note: "スタッフに画面を見せてください"
+        main: "あたり",
+        sub: "今を楽しもう。せっかく当たったんだし、食べてみない？",
+        note: "この画面を提示でチーズトッピング無料"
       },
       lose: {
-        main: "😔 はずれ",
+        main: "はずれ",
         sub: "またチャレンジしてください！",
         note: ""
       }
