--- a/stamp.html
+++ b/stamp.html
@@ -186,7 +186,7 @@
   <div class="progress-bar"><div class="progress-bar-fill" id="progressFill"></div></div>
   <div class="poster-grid" id="posterGrid"></div>
   <div id="completeBanner" style="display:none;">🎉 全ポスターコンプリート 🎉</div>
-  <div id="perfectBanner" style="display:none;">💀 シークレットまで完全制覇 💀</div>
+  <div id="perfectBanner" style="display:none;">💀 パーフェクトコンプリート 💀</div>
 
   <div class="modal" id="imageModal" onclick="this.style.display='none'">
     <img id="modalImage" src="" alt="拡大画像" />
