--- a/transition.html
+++ b/transition.html
@@ -44,15 +44,15 @@
   const id = urlParams.get("id");
 
   const loadingTextMap = {
-    A: "ライバルは、全団体。抽選中...",
-    B: "肉を求める本能 抽選中...",
-    C: "それは、ただの串じゃない 抽選中...",
-    D: "ブチアゲろ、牛肉魂！ 抽選中...",
-    E: "もう一度食べたくなる、そんな味。 抽選中...",
-    F: "ネオンの中で炎が踊る… 抽選中...",
-    G: "香ばしさの極みへ… 抽選中...",
-    H: "神々の裁きが下る… 抽選中...",
-    I: "蒼き神の啓示… 抽選中..."
+    A: "奇跡を見たことはあるか？",
+    B: "大学祭、お楽しみ頂けてますかな？",
+    C: "美術館ではお静かに。何？大学祭？…なら騒ごう！",
+    D: "マジテンションブチアゲてこ？",
+    E: "時折記憶の中に現れるあの頃の記憶。もう戻れはしない",
+    F: "こんなとこにあるポスター、よく見つけたね。",
+    G: "ようこそ。好きなお席に着いてお待ちください。",
+    H: "この先へ進む覚悟はあるか？",
+    I: "我が恩寵を授けてやろう。"
   };
 
   const textEl = document.getElementById("loadingText");
