--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     } else {
       statusEl.textContent = "抽選ページに移動します...";
       setTimeout(() => {
-        window.location.href = `draw.html?id=${id}`;
+        window.location.href = `transition.html?id=${id}`;
       }, 1000);
     }
   </script>
