--- a/transition.html
+++ b/transition.html
@@ -45,20 +45,97 @@
   if (id) id = id.toUpperCase();
 
   const loadingTextMap = {
-    A: "奇跡を見たことはあるか？",
-    B: "大学祭、お楽しみ頂けてますかな？",
-    C: "美術館ではお静かに。何？大学祭？…なら騒ごう！",
-    D: "マジテンションブチアゲてこ？",
-    E: "時折記憶の中に現れるあの頃の記憶。もう戻れはしない",
-    F: "こんなとこにあるポスター、よく見つけたね。",
-    G: "ようこそ。好きなお席に着いてお待ちください。",
-    H: "この先へ進む覚悟はあるか？",
-    I: "我が恩寵を授けてやろう。"
+    A: [
+      { key: "A1", text: "奇跡を見たことはあるか？" },
+      { key: "A2", text: "今日は運が味方しているかもしれない。" },
+      { key: "A3", text: "まだ見ぬ奇跡が待っている。" },
+      { key: "A4", text: "目の前の瞬間を大切にしろ。" },
+    ],
+    B: [
+      { key: "B1", text: "大学祭、お楽しみ頂けてますかな？" },
+      { key: "B2", text: "次はもっと熱く盛り上がろう！" },
+      { key: "B3", text: "まだまだ楽しみはこれからだ。" },
+      { key: "B4", text: "笑顔の連鎖を広げよう！" },
+    ],
+    C: [
+      { key: "C1", text: "美術館ではお静かに。何？大学祭？…なら騒ごう！" },
+      { key: "C2", text: "アートの世界と祭りの融合を楽しもう！" },
+      { key: "C3", text: "今日は特別な日だ、思い切り騒げ！" },
+      { key: "C4", text: "感性を解き放て！" },
+    ],
+    D: [
+      { key: "D1", text: "マジテンションブチアゲてこ？" },
+      { key: "D2", text: "今がチャンス、思いっきり楽しもう！" },
+      { key: "D3", text: "勢いそのままに行こうぜ！" },
+      { key: "D4", text: "盛り上がりはこれからが本番！" },
+    ],
+    E: [
+      { key: "E1", text: "時折記憶の中に現れるあの頃の記憶。もう戻れはしない" },
+      { key: "E2", text: "過去を振り返るな、未来へ進め。" },
+      { key: "E3", text: "思い出は胸にしまっておこう。" },
+      { key: "E4", text: "今を生きることが一番大事だ。" },
+    ],
+    F: [
+      { key: "F1", text: "こんなとこにあるポスター、よく見つけたね。" },
+      { key: "F2", text: "探すことが冒険の始まりだ。" },
+      { key: "F3", text: "次はどこに行こうか？" },
+      { key: "F4", text: "歩みを止めずに進め。" },
+    ],
+    G: [
+      { key: "G1", text: "ようこそ。好きなお席に着いてお待ちください。" },
+      { key: "G2", text: "リラックスして楽しもう。" },
+      { key: "G3", text: "準備はいいか？" },
+      { key: "G4", text: "特別な時間が始まる。" },
+    ],
+    H: [
+      { key: "H1", text: "この先へ進む覚悟はあるか？" },
+      { key: "H2", text: "怖がらずに一歩踏み出せ。" },
+      { key: "H3", text: "運命は君の手の中にある。" },
+      { key: "H4", text: "挑戦こそが未来を作る。" },
+    ],
+    I: [
+      { key: "I1", text: "我が恩寵を授けてやろう。" },
+      { key: "I2", text: "選ばれし者の証だ。" },
+      { key: "I3", text: "光を掴む！" },
+      { key: "I4", text: "その手で掴み取れ。" },
+    ]
   };
 
   const textEl = document.getElementById("loadingText");
+  if (!id || !loadingTextMap[id]) {
+    window.location.href = "error.html";
+    return;
+  }
 
-  // テキストアニメーション（type風）
+  const storageKey = `gyumax_msg_${id}`;
+
+  // 表示済みメッセージID配列をlocalStorageから取得
+  let shownKeys = [];
+  try {
+    shownKeys = JSON.parse(localStorage.getItem(storageKey)) || [];
+  } catch {
+    shownKeys = [];
+  }
+
+  const messages = loadingTextMap[id];
+  // 未表示のメッセージを絞り込み
+  const notShown = messages.filter(m => !shownKeys.includes(m.key));
+
+  let selectedMsg;
+
+  if (notShown.length === 0) {
+    // 全部表示済みならリセットして最初から
+    shownKeys = [];
+    selectedMsg = messages[Math.floor(Math.random() * messages.length)];
+  } else {
+    // 未表示からランダムに選ぶ
+    selectedMsg = notShown[Math.floor(Math.random() * notShown.length)];
+    shownKeys.push(selectedMsg.key);
+    // 保存
+    localStorage.setItem(storageKey, JSON.stringify(shownKeys));
+  }
+
+  // テキストアニメーション
   function typeText(text, el, delay = 50) {
     el.textContent = "";
     [...text].forEach((char, i) => {
@@ -66,6 +143,20 @@
         el.textContent += char;
       }, i * delay);
     });
+  }
+
+  typeText(selectedMsg.text, textEl);
+
+  // ここからは抽選処理（表示は固定）
+  const resultStorageKey = `gyumax_result_${id}`;
+  let result = localStorage.getItem(resultStorageKey);
+  let isAtari;
+
+  if (result) {
+    isAtari = result === "win";
+  } else {
+    isAtari = Math.random() < 0.3;
+    localStorage.setItem(resultStorageKey, isAtari ? "win" : "lose");
   }
 
   // トークン生成
@@ -77,28 +168,8 @@
     }
     return token;
   }
-
-  // 処理本体
-  if (!id || !loadingTextMap[id]) {
-    window.location.href = "error.html";
-    return;
-  }
-
-  typeText(loadingTextMap[id], textEl);
-
-  const storageKey = `gyumax_${id}`;
-  let result = localStorage.getItem(storageKey);
-  let isAtari;
-
-  if (result) {
-    isAtari = result === "win";
-  } else {
-    isAtari = Math.random() < 0.3;
-    localStorage.setItem(storageKey, isAtari ? "win" : "lose");
-  }
-
   const token = generateToken();
-  sessionStorage.setItem("gyumax_token", token);  // ここを追加
+  sessionStorage.setItem("gyumax_token", token);
 
   setTimeout(() => {
     const resultStr = isAtari ? "win" : "lose";
